--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -3,8 +3,8 @@ parameters:
     database_host: 127.0.0.1
     database_port: null
     database_name: bitak
-    database_user: bitak
-    database_password: bi7aK-p@$$w0rd
+    database_user: skip
+    database_password: skip-password
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: null
