Implemented logout, created header menu and added styles to login and register forms. Resolves GH-11, resolves GH-12, resolves GH-14

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -32,14 +32,14 @@ security:
                 # Secure the login form against CSRF
                 # Reference: http://symfony.com/doc/current/cookbook/security/csrf_in_login_form.html
                 csrf_token_generator: security.csrf.token_manager
-                default_target_path: account
-                failure_path: fail
+                default_target_path: home
+#                failure_path: fail
 
             logout:
                 # The route name the user can go to in order to logout
                 path: security_logout
                 # The name of the route to redirect to after logging out
-                target: blog_index
+                target: security_login
 
     access_control:
     # this is a catch-all for the admin area
